force-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <description>This Object stores the details of the Income on Monthly basis.</description>
    <label>Income</label>
    <nameField>
        <label>Income</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>