force-app/main/default/objects/Income__c/fields/Credited_Date__c.field-meta.xml
<CustomField>
    <fullName>Credited_Date__c</fullName>
    <label>Credited Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>