force-app/main/default/objects/Income__c/fields/Gross_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Gross_Deductions__c</fullName>
    <formula>Provident_Fund__c +  Professional_Tax__c +  Others__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>