force-app/main/default/objects/Income__c/fields/Gross_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Gross_Earnings__c</fullName>
    <formula>Primary_Earnings__c +  Secondary_Earnings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Earnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>