force-app/main/default/objects/Income__c/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <formula>Gross_Earnings__c -  Gross_Deductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>