force-app/main/default/objects/Income__c/fields/Primary_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Primary_Earnings__c</fullName>
    <label>Primary Earnings</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>