force-app/main/default/objects/Income__c/fields/Professional_Tax__c.field-meta.xml
<CustomField>
    <fullName>Professional_Tax__c</fullName>
    <label>Professional Tax</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>