force-app/main/default/objects/Income__c/fields/Provident_Fund__c.field-meta.xml
<CustomField>
    <fullName>Provident_Fund__c</fullName>
    <label>Provident Fund (PF)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>