force-app/main/default/objects/Income__c/fields/Secondary_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Earnings__c</fullName>
    <label>Secondary Earnings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>