force-app/main/default/objects/Income__c/fields/Source_of_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Earnings__c</fullName>
    <label>Source of Earnings</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>